Fixed file input styles, aligned properly with the rest of input fields

--- a/assets/stylesheets/controllers/admin-pages-edit/form.css.scss
+++ b/assets/stylesheets/controllers/admin-pages-edit/form.css.scss
@@ -17,4 +17,7 @@
         z-index: 100;
     }
 
+    .form-group .smart-file-input {
+        margin-left: 13px;
+    }
 }
